--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="artigos">Artigos</a></li>
                 <li>
                     <a href="roms">Roms</a>
+                    <img src="assets/down-arrow.png" alt="">
                     <div class="submenu">
                         <a href="https://emersonlinogames.blogspot.com/" target="_blank">
                             <div class="subItem">emersonlinogames</div>
@@ -54,6 +55,100 @@
                 </li>
             </ul>
         </div>
+
+        <div class="carrossel">
+            <div id="slider">
+                <div class="slide">
+                    <img src="imagens/hacker1.jpeg" alt="Image 1">
+                </div>
+                <div class="slide">
+                    <img src="imagens/atari.jpg" alt="Image 2">
+                </div>
+                <div class="slide">
+                    <img src="imagens/java1.jpg" alt="Image 3">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/hacker2.jpg" alt="Image 4">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/super-mario-bros.jpg" alt="Image 5">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/js.png" alt="Image 6">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/hacker3.jpeg" alt="Image 7">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/sonic.jpeg" alt="Image 8">
+                </div>
+
+                <div class="slide">
+                    <img src="imagens/python.png" alt="Image 9">
+                </div>
+            </div>
+        </div>
+
+        <audio src="musicas/Back and Forth _ Silent Partner (No Copyright Music - Música sem Direitos Au.mp3" autoplay
+            controls muted loop></audio>
+
+        <div class="noticias1">
+            <h3>Final Fight no megadrive</h3>
+            <img src="imagens/Final-Fight-MD.jpg" width="250" height="100" alt="">
+            <p>
+                O Mega Drive, nunca recebeu um port oficial do game, agora está com um projeto homebrew que está
+                buscando fazer tal “reparação histórica”.<br>
+                O console da SEGA chegou a receber um port, mas não para o console em si. Quem recebeu o port foi o SEGA
+                CD, com uma versão melhor que a de Super Nintendo, devido às melhores capacidades do add-on.
+                Para mais informações clique no link:
+                <a href="https://warpzone.me/final-fight-esta-ganhando-versao-homebrew-para-o-mega-drive/"
+                    target="_blank" style="color: #fff222">Final-Fight-MD</a>
+            </p>
+        </div>
+
+        <div class="noticias2">
+            <h3>Ameaça de hackers chineses sobre os EUA</h3>
+            <img src="imagens/chineses.jpg" width="250" height="100" alt="">
+            <p>
+                Uma funcionária de alto escalão do FBI alertou os secretários de estado dos Estados Unidos nesta
+                quinta-feira (16) que os hackers chineses representam uma “ameaça crescente”.<br>
+                Noticia completa no link:
+                <a href="https://www.cnnbrasil.com.br/internacional/oficial-do-fbi-alerta-estados-dos-eua-sobre-ameaca-de-hackers-chineses/"
+                    target="_blank" style="color: #fff222">cyber ataque</a>
+            </p>
+        </div>
+
+        <div class="noticias3">
+            <h3>As 10 linguagens de programação para 2023</h3>
+            <img src="imagens/linguagem.jpg" width="250" height="100" alt="">
+            <p>
+                Conhecimento em linguagens de programação úteis e confiáveis é uma exigência dentro do mercado de
+                desenvolvimento, a fim de possibilitar a codificação de aplicações seguras, de fácil usabilidade e
+                escaláveis.
+                Por conta disso, especialistas em Python, JavaScript e HTML sempre são bastante demandados pelas
+                empresas.
+                <a href="https://canaltech.com.br/carreira/as-10-linguagens-de-programacao-que-estarao-em-alta-em-2023-222412/"
+                    target="_blank" style="color: #fff222"> As 10 linguagens de programação para 2023</a>
+            </p>
+        </div>
+
+        <footer class="rodape">
+            <ul>
+                <li>
+                    <h2>Contatos</h2>
+                </li>
+                <li>Email: mscyber20@gmail.com</li>
+                <li><a href="https://www.youtube.com/channel/UC8mHQLqDR136MN2IIdvyUKQ" target="_blank"
+                        style="color:aliceblue"> Canal no Youtube </a></li>
+                <li><a href="https://www.instagram.com/gamergeracao4/" target="_blank"
+                        style="color:#f5fffa">intagram</a></li>
+            </ul>
+        </footer>
     </div>
 </body>
 
