atualização dos icones

--- a/index.html
+++ b/index.html
@@ -142,11 +142,12 @@
                 <li>
                     <h2>Contatos</h2>
                 </li>
-                <li>Email: mscyber20@gmail.com</li>
+                <li> mscyber20@gmail.com</li>
                 <li><a href="https://www.youtube.com/channel/UC8mHQLqDR136MN2IIdvyUKQ" target="_blank"
-                        style="color:aliceblue"> Canal no Youtube </a></li>
-                <li><a href="https://www.instagram.com/gamergeracao4/" target="_blank"
-                        style="color:#f5fffa">intagram</a></li>
+                        style="color:aliceblue"> <img src="assets/youtube.png" width="60px" height="50px" alt="youtube">
+                    </a></li>
+                <li><a href="https://www.instagram.com/gamergeracao4/" target="_blank" style="color:#f5fffa"><img
+                            src="assets/instagram.png" width="60px" height="50px" alt="instagram"></a></li>
             </ul>
         </footer>
     </div>
